--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ docutils==0.13.1
 futures==3.0.5
 jmespath==0.9.1
 python-dateutil==2.6.0
+requests==2.13.0
 s3transfer==0.1.10
 six==1.10.0
+tinify==1.5.0
 wheel==0.26.0
